alter orange to #ff7700

--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -2,7 +2,7 @@ $fonts__heading: 'Georgia', serif;
 $font___body: 'Helvetica', sans-serif;
 
 $color__blue: rgb(49, 49, 156);
-$color__red: rgb(133, 0, 0);
+$color__red: #ff7700;
 $color__brightRed: rgb(255, 0, 0);
 $color__White: rgb(255, 255, 255);
 $color__black: rgb(0, 0, 0);
